--- a/MyApplication/app/src/main/res/values/colors.xml
+++ b/MyApplication/app/src/main/res/values/colors.xml
@@ -7,8 +7,14 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    // --- Start of my code ---
+
     <color name="available">#07D800</color>
     <color name="occupied">#ED0000</color>
     <color name="blue">#3F51B5</color>
     <color name="orange">#FF9800</color>
+
+    // --- End of my code ---
+
 </resources>
